feat: Add the force query param to add device metadata API
Resolves #4694. Add the force query param to add device metadata API.
